# Mobile-App

./: .gitignore  CHANGELOG.md  README_START_HERE.md
backend/: config_a.json  config_b.json  extract_viseme_frames.py  extract_viseme_frames_fixed.py  pyproject.toml  requirements.txt  review_alignment.py
backend/config/: languages.json  sprite_profile_21.json
backend/production_lipsync/: audio_tools.py  cli_generate.py  file_utils.py  indic_f5_tts.py  indic_viseme_mapper.py  mfa_aligner.py  normalizer.py  piper_tts.py  preview_from_textgrid_only.py  quality_report.py  requirements.txt  schema.py  smoothing.py  textgrid_parser.py
tools/: install_english_models_windows.ps1  install_windows.ps1  run_english_example.ps1  run_tamil_example.ps1
unity/Assets/: AvatarSpeechController.cs  DurationToVisemeConverter.cs  KannadaVisemeMapper.cs  MalayalamVisemeMapper.cs  RasaModelFullTest.cs  RasaMultiLanguageTest.cs  TamilVisemeMapper.cs  TamilVitsTokenizer.cs  TeluguVisemeMapper.cs  VisemeInterval.cs  VisemeIntervalPlayer.cs  VisemeSmoother.cs
unity/Assets/Editor/: VisemeFrameAutoPopulator.cs
unity/Assets/Resources/: vocab.json
unity/Assets/Scenes/: SampleScene.unity
unity/Assets/Scripts/: ProductionFullFrameLipSyncPlayer.cs
unity/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
unity/ProjectSettings/: ProjectSettings.asset
